--- a/src/main/resources/webserver/template/network/user/nasstate/nasstate.html
+++ b/src/main/resources/webserver/template/network/user/nasstate/nasstate.html
@@ -80,7 +80,7 @@
                 {% elseif nas.getUpdateState().orElse('5') == '2' %}kein Update verf&uuml;gbar
                 {% elseif nas.getUpdateState().orElse('5') == '3' %}verbindung zum Server wird aufgebaut
                 {% elseif nas.getUpdateState().orElse('5') == '4' %}getrennt
-                {% elseif nas.getUpdateState().orElse('5') == '5' %}andere (nubenkannt)
+                {% elseif nas.getUpdateState().orElse('5') == '5' %}andere (unbenkannt)
                 {% endif %}
             </td>
         </tr>
