--- a/src/main/resources/webserver/template/shoppinglist/user/index.html
+++ b/src/main/resources/webserver/template/shoppinglist/user/index.html
@@ -5,11 +5,242 @@
     <title>Einkaufsliste</title>
     {% include '/webserver/template/header.html' %}
     <link rel="manifest" href="/static/manifest/shoppinglistmanifest.json">
+    <script type="text/javascript">
+
+        var content = [
+        {% for suggestion in suggestions %}
+            { title: '{{ suggestion }}' }{% if not (loop.last) %},{% endif %}
+        {% endfor %}
+        ];
+
+        $(function() {
+
+            $('.dropdown').dropdown();
+
+            $('.ui.search').search({
+                source: content
+            });
+        });
+    </script>
 </head>
 <body>
 {% include '/webserver/template/shoppinglist/user/headline.html' %}
 <main class="ui main container">
-
+    <h1 class="ui header top attached">Einkaufsliste</h1>
+    {% if success is defined %}
+    <div class="ui message icon attached {% if success %}success{% else %}error{% endif %}">
+        {% if success %}
+        <i class="check icon green"></i>
+        {% else %}
+        <i class="remove icon red"></i>
+        {% endif %}
+        <div class="content">
+            <p>{{ message | escape }}</p>
+        </div>
+    </div>
+    {% endif %}
+    {% if edit %}
+    <div class="ui attached segment">
+        <div class="ui icon button basic green" onclick="$('#addShoppingList').modal('show');"><i class="plus icon"></i> Liste hinzuf&uuml;gen</div>
+        <div class="ui modal" id="addShoppingList">
+            <div class="header">
+                Einkaufsliste hinzuf&uuml;gen
+            </div>
+            <div class="content">
+                <form class="ui form" method="post" id="addShoppingListForm" action="/shoppinglist/addlist">
+                    <input name="addlist" type="hidden" value="1">
+                    <div class="grouped fields">
+                        <div class="field required">
+                            <label>Name</label>
+                            <input name="name" placeholder="Name ..." type="text" pattern=".{3, 50}" required>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="actions">
+                <div class="actions">
+                    <div class="ui black deny button">
+                        abbrechen
+                    </div>
+                    <div class="ui positive right labeled icon button" onclick="$('#addShoppingListForm').submit();">
+                        speichern
+                        <i class="checkmark icon"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    {% endif %}
+    <div class="ui segment bottom attached" style="margin-bottom: 40px;">
+        {% if shoppingLists.size() > 0 %}
+        {% for list in shoppingLists %}
+        <h2 class="ui header top attached inverted teal" id="{{ list.getId().get() | escape }}">{{ list.getName() | escape }}</h2>
+        <div class="ui {% if edit %}three{% else %}two{% endif %} item menu attached">
+            {% if not edit %}
+            <a class="item" title="Eintrag hinzuf&uuml;gen" onclick="$('#a{{ list.getId().get() | escape }}').modal('show');"><i class="plus icon"></i></a>
+            <div class="ui modal" id="a{{ list.getId().get() | escape }}">
+                <div class="header">
+                    Eintrag hinzuf&uuml;gen
+                </div>
+                <div class="content">
+                    <form class="ui form" method="post" id="b{{ list.getId().get() | escape }}" action="/shoppinglist/additem">
+                        <input name="addentry" type="hidden" value="1">
+                        <input name="listid" type="hidden" value="{{ list.getId().get() | escape }}">
+                        <!--
+                        <div class="field required">
+                            <label>Artikel</label>
+                            <input name="name" placeholder="Artikel ..." type="text" pattern=".{1, 50}" required>
+                        </div>
+                        -->
+                        <div class="field required">
+                            <label>Artikel</label>
+                            <div class="ui search">
+                                <div class="ui icon input">
+                                    <input class="prompt" type="text" name="name" placeholder="Artikel ..." pattern=".{1, 50}" required>
+                                </div>
+                                <div class="results"></div>
+                            </div>
+                        </div>
+                        <div class="fields">
+                            <div class="field ten wide">
+                                <label>Menge</label>
+                                <input type="number" placeholder="Menge ..." name="amount" min="0" max="1000000" step="1">
+                            </div>
+                            <div class="field six wide">
+                                <label>Einheit</label>
+                                <select name="unit" class="ui dropdown">
+                                    <option value="St&uuml;ck">St&uuml;ck</option>
+                                    <option value="Pack">Pack</option>
+                                    <option value="g">g</option>
+                                    <option value="kg">kg</option>
+                                    <option value="ml">ml</option>
+                                    <option value="l">l</option>
+                                    <option value="cm">cm</option>
+                                    <option value="m">m</option>
+                                    <option value="">keine</option>
+                                </select>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="actions">
+                    <div class="actions">
+                        <div class="ui black deny button">
+                            abbrechen
+                        </div>
+                        <div class="ui positive right labeled icon button" onclick="$('#b{{ list.getId().get() | escape }}').submit();">
+                            speichern
+                            <i class="checkmark icon"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <a class="item" title="Liste drucken" href="/shoppinglist/printlist?id={{ list.getId().get() | escape}}"><i class="print icon"></i></a>
+            {% endif %}
+            {% if edit %}
+            <a title="nach oben verschieben" class="item {% if list.getOrderId() == 0 %}disabled{% endif %}" {% if list.getOrderId() != 0 %}href="/shoppinglist/listorder?direction=up&id={{ list.getId() }}"{% endif %}><i class="arrow up icon"></i></a>
+            <a title="nach unten verschieben" class="item {% if list.getOrderId() == maxOrderId %}disabled{% endif %}" {% if list.getOrderId() != maxOrderId %}href="/shoppinglist/listorder?direction=down&id={{ list.getId() }}"{% endif %}><i class="arrow down icon"></i></a>
+            <a class="item" title="Liste l&ouml;schen" onclick="$('#a{{ list.getId().get() | escape}}').modal('show');"><i class="remove icon"></i></a>
+            <div class="ui basic modal" id="a{{ list.getId().get() | escape}}">
+                <div class="ui icon header">
+                    <i class="delete icon"></i>
+                    Einkaufsliste l&ouml;schen
+                </div>
+                <div class="content">
+                    <p>Bist du sicher das du die Einkaufsliste l&ouml;schen m&ouml;chtest?</p>
+                </div>
+                <div class="actions">
+                    <div class="ui red basic cancel inverted button">
+                        <i class="remove icon"></i>
+                        Nein
+                    </div>
+                    <div class="ui green ok inverted button" onclick="window.location = '/shoppinglist/deletelist?id={{ list.getId().get() | escape }}'">
+                        <i class="checkmark icon"></i>
+                        Ja
+                    </div>
+                </div>
+            </div>
+            {% endif %}
+        </div>
+        {% if list.getItems().size() > 0 %}
+        <div class="ui bottom attached segment">
+            {% if list.getItems().size < 5 or mobileView %}
+            <div class="ui relaxed divided list">
+                {% for item in list.getItems() %}
+                <div class="item">
+                    <div class="content">
+                        <div class="right floated content">
+                            <a class="ui icon button basic" title="Eintrag l&ouml;schen" href="/shoppinglist/deleteitem?item={{ item.getId().get() | escape }}&list={{ list.getId().get() | escape }}"><i class="remove icon"></i></a>
+                        </div>
+                        <div class="header">{{ item.getName() | escape }}</div>
+                        {% if item.getAmount().isPresent() %}
+                        <div class="description">{{ item.getAmount().get() | escape }}</div>
+                        {% endif %}
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+            {% else %}
+            <div class="ui grid stackable">
+                <div class="eight wide column">
+                    <div class="ui relaxed divided list">
+                        {% for item in list.getItems() %}
+                        {% if loop.index0 % 2 == 0 %}
+                        <div class="item">
+                            <div class="content">
+                                <div class="right floated content">
+                                    <a class="ui icon button basic" title="Eintrag l&ouml;schen" href="/shoppinglist/deleteitem?item={{ item.getId().get() | escape }}&list={{ list.getId().get() | escape }}"><i class="remove icon"></i></a>
+                                </div>
+                                <div class="header">{{ item.getName() | escape }}</div>
+                                {% if item.getAmount().isPresent() %}
+                                <div class="description">{{ item.getAmount().get() | escape }}</div>
+                                {% endif %}
+                            </div>
+                        </div>
+                        {% endif %}
+                        {% endfor %}
+                    </div>
+                </div>
+                <div class="eight wide column">
+                    <div class="ui relaxed divided list">
+                        {% for item in list.getItems() %}
+                        {% if loop.index0 % 2 == 1 %}
+                        <div class="item">
+                            <div class="content">
+                                <div class="right floated content">
+                                    <a class="ui icon button basic" title="Eintrag l&ouml;schen" href="/shoppinglist/deleteitem?item={{ item.getId().get() | escape }}&list={{ list.getId().get() | escape }}"><i class="remove icon"></i></a>
+                                </div>
+                                <div class="header">{{ item.getName() | escape }}</div>
+                                {% if item.getAmount().isPresent() %}
+                                <div class="description">{{ item.getAmount().get() | escape }}</div>
+                                {% endif %}
+                            </div>
+                        </div>
+                        {% endif %}
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
+            {% endif %}
+        </div>
+        {% else %}
+        <div class="ui placeholder segment bottom attached">
+            <div class="ui icon header">
+                <i class="pdf file outline icon"></i>
+                keine Artikel auf der Einkaufsliste
+            </div>
+        </div>
+        {% endif %}
+        {% endfor %}
+        {% else %}
+        <div class="ui placeholder segment bottom attached">
+            <div class="ui icon header">
+                <i class="pdf file outline icon"></i>
+                keine Einkaufsliste erstellte
+            </div>
+        </div>
+        {% endif %}
+    </div>
 </main>
 </body>
 </html>
