--- a/src/main/resources/webserver/template/header.html
+++ b/src/main/resources/webserver/template/header.html
@@ -4,3 +4,6 @@
         <script src="/static/semantic/semantic.min.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
         <meta name="theme-color" content="rgba(34, 36, 38, 0.1)" />
+        <link rel="icon" type="image/png" sizes="32x32" href="/static/img/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="/static/img/favicon/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/static/img/favicon/favicon-16x16.png">
